export default interface Refundable {
    isRefundable(): boolean;
}