export default interface Savable {
    isSavable():boolean;
}